--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Simran Bawkar"
-  avatar           : "profile.png"
+  avatar           : "profile_img.jpeg"
   bio              : "Machine Learning Engineer at GE Healthcare"
   location         : "Bengaluru"
   employer         :
